# pyqcm

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE  README.md  README.txt  bitbucket-pipelines.yml  pyproject.toml  setup.py
.github/workflows/: mirror-to-bitbucket.yml
bench/: bench_GS_loop.py
bench/ED/: bench_ED.py  bench_ED2.py  bench_ED2_laptop.txt  bench_GS.py  bench_GS2.py  bench_GS_loop.py  model_1D.py  model_2D.py  plot_bench_ED.py
bench/integrals/: plot_concurrent.py  plot_integrals.py
bench/integrals/small/: integrals_small.py  integrals_small_concurrent.txt  integrals_small_results.txt  model_small.py
bench/vca/: bench_vca.py  bench_vca2.py
debug/: model_1D.py
docs/: makedoc
docs/parallel_study/: debug_10min.py
docs/source/: cdmft.rst  conf.py  defining_cluster_models.rst  defining_models.rst  hartree.rst  index.rst  intro.rst  loop.rst  models.rst  options.rst  other_functions.rst  parallel.rst  parameters.rst  spectral.rst  vca.rst
examples/1D_2_4b/: QCM_params.def  averages.tsv  cdmft.tsv  cdmft_iter.tsv  debug.py  debug_variable_parameter.py  hop.npy  interaction.npy
examples/1D_4/: debug.py  debug_cdw.py  debug_rhoAB.py
notebooks/: AF_VCA_vs_L.ipynb  AF_VCA_vs_L.py  CDW_1D.ipynb  CDW_1D.py  Mott_Weyl.ipynb  Mott_Weyl.py  Mott_transition_graphene_CDMFT.ipynb  Mott_transition_graphene_CDMFT.py  Rashba_coupling.ipynb  Rashba_coupling.py  antiferromagnetism_VCA.ipynb  antiferromagnetism_VCA.py  dimerization_1D.ipynb  dimerization_1D.py  intro1.ipynb  intro1.py  intro2.ipynb  intro2.py  intro3.ipynb  intro3.py  periodic_cluster.ipynb  periodic_cluster.py  superconductivity_VCA.ipynb  superconductivity_VCA.py
pyqcm/: Kolmogorov_Smirnov.py  __init__.py  _draw.py  _loop.py  _spectral.py  _version.py  berry.py  cdmft.py  cdw.py  draw_operator.py  external.py  hartree.py  loop.py  slab.py  spectral.py  variable_parameter.py  vca.py
src_ed/: Green_function_set.hpp  Q_matrix.hpp  Q_matrix_set.hpp  binary_state.cpp  continued_fraction_set.cpp  flex_array.hpp  matrix_continued_fraction.hpp  mcf_set.hpp  model.cpp  model.hpp  model_instance.cpp  model_instance.hpp  model_instance_base.cpp  model_instance_base.hpp  qcm_ED.cpp  qcm_ED.hpp  sparse_matrix.hpp  state.hpp  symmetry_group.cpp
src_ed/Hamiltonian/: Davidson.hpp  Hamiltonian_CSR.hpp  Hamiltonian_Dense.hpp  Hamiltonian_Eigen.hpp  Hamiltonian_Factorized.hpp  Hamiltonian_Operator.hpp  Hamiltonian_base.hpp  Lanczos.cpp  Lanczos.hpp  PRIMME_solver.hpp
src_ed/Operators/: HS_general_interaction_operator.hpp  HS_operator.hpp  Heisenberg_operator.hpp  Hermitian_operator.hpp  Hund_operator.hpp  general_interaction_operator.hpp  interaction_operator.hpp
src_python/: common_Py.cpp  common_Py.hpp  qcm_ED_lib.cpp  qcm_ED_only.hpp  qcm_ED_wrap.hpp  qcm_lib.cpp  qcm_wrap.hpp
src_qcm/: CPT.cpp  Green_function.hpp  QCM.cpp  QCM.hpp  average.cpp  lattice3D.cpp  lattice3D.hpp  lattice_hybrid.cpp  lattice_hybrid.hpp  lattice_model.cpp  lattice_model.hpp  lattice_model_instance.cpp  lattice_model_instance.hpp  lattice_operator.cpp  parameter_set.cpp  parameter_set.hpp  print.cpp  vector3D.hpp
src_util/: ED_global_parameter.cpp  VDVH_kernel.cpp  VDVH_kernel.hpp  global_parameter.cpp  integrate.cpp  matrix.cpp  matrix.hpp  parser.cpp  parser.hpp  types.hpp  vector_num.hpp
tests/: test_all.py
tests/test_diagonalization/: model_1D_8.py  model_2x2_2C_8b_C2v_L.py
tests/test_files/: model_1D.py  model_1D_2_4b.py  model_1D_4.py  model_1D_4_C2.py  model_2x2_C2.py  model_2x2_C2_vca.py  model_WSM.py  model_graphene_bath.py  model_hartree.py  record_spin.py  test_2clusters.py  test_CF.py  test_averages.py  test_averages_bath.py  test_averages_complex.py  test_berry.py  test_cdmft.py  test_cdmft_1x4_4b_2sb.py  test_cdmft_1x4_6b_2sb.py  test_cdmft_2clusters.py  test_cdmft_2x2_4b_4sb.py  test_cdmft_2x2_8b_4sb.py  test_cdmft_4b_2sb.py  test_cdmft_6b_2sb.py  test_cdmft_by_system.py  test_cdmft_by_system_replicas.py  test_cdmft_hartree.py  test_cdmft_jac_methods.py  test_cdmft_lieb_wu.py  test_cdmft_methods.py  test_cdmft_minimization.py  test_cdmft_sb.py  test_cdmft_trf.py  test_cluster_average.py  test_controlled_loop.py  test_current.py  test_dispersion.py  test_draw.py  test_extern_hybrid_cdmft.py  test_extern_hybrid_cpt.py  (+18 more)
